--- a/OrangeFun/首页/View/搜索框/SearchBarViewCell.xib
+++ b/OrangeFun/首页/View/搜索框/SearchBarViewCell.xib
@@ -7,46 +7,75 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="63" id="KGk-i7-Jjw" customClass="SearchBarViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="358" height="63"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="79" id="KGk-i7-Jjw" customClass="SearchBarViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="358" height="79"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="358" height="62.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="358" height="78.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qH9-9o-PTg">
-                        <rect key="frame" x="0.0" y="0.0" width="358" height="1"/>
-                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="1" id="xzO-De-52S"/>
-                        </constraints>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R6V-FX-QOz">
+                        <rect key="frame" x="0.0" y="0.0" width="358" height="71.5"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IUG-xb-J1T">
-                        <rect key="frame" x="18" y="11.5" width="322" height="40"/>
+                        <rect key="frame" x="18" y="16" width="322" height="40"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="IUG-xb-J1T" secondAttribute="height" multiplier="723:90" id="MMw-KL-it5"/>
                         </constraints>
                     </imageView>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="search" translatesAutoresizingMaskIntoConstraints="NO" id="f5J-Pl-ZOE">
+                        <rect key="frame" x="36" y="26.5" width="19" height="19"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="19" id="0u9-A0-Zye"/>
+                            <constraint firstAttribute="width" constant="19" id="2VK-np-ew7"/>
+                        </constraints>
+                    </imageView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y26-38-LmN">
+                        <rect key="frame" x="0.0" y="71.5" width="358" height="7"/>
+                        <color key="backgroundColor" red="0.95686274509803915" green="0.95686274509803915" blue="0.95686274509803915" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="7" id="gNZ-ic-vaC"/>
+                        </constraints>
+                    </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="搜索故事" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3r2-in-psV">
+                        <rect key="frame" x="63" y="25.5" width="69.5" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="R6V-FX-QOz" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="8nP-gK-bRD"/>
+                    <constraint firstItem="y26-38-LmN" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="BDb-26-IZY"/>
+                    <constraint firstItem="3r2-in-psV" firstAttribute="centerY" secondItem="f5J-Pl-ZOE" secondAttribute="centerY" id="Bxl-cx-GIV"/>
+                    <constraint firstItem="f5J-Pl-ZOE" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="20" id="EvW-H7-aRu"/>
+                    <constraint firstAttribute="bottom" secondItem="R6V-FX-QOz" secondAttribute="bottom" constant="7" id="LdM-UZ-6rg"/>
+                    <constraint firstAttribute="trailing" secondItem="R6V-FX-QOz" secondAttribute="trailing" id="MPX-uZ-BSR"/>
                     <constraint firstItem="IUG-xb-J1T" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="0.9" id="PAd-R4-nF1"/>
-                    <constraint firstItem="qH9-9o-PTg" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Prr-J8-ayX"/>
-                    <constraint firstItem="qH9-9o-PTg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="ba5-pO-BFB"/>
-                    <constraint firstAttribute="trailing" secondItem="qH9-9o-PTg" secondAttribute="trailing" id="c2t-yb-hDe"/>
-                    <constraint firstItem="IUG-xb-J1T" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="iul-ie-6jR"/>
+                    <constraint firstAttribute="bottom" secondItem="y26-38-LmN" secondAttribute="bottom" id="Wzn-gd-ApY"/>
+                    <constraint firstItem="3r2-in-psV" firstAttribute="leading" secondItem="f5J-Pl-ZOE" secondAttribute="trailing" constant="8" id="XyT-26-EH9"/>
+                    <constraint firstItem="f5J-Pl-ZOE" firstAttribute="centerY" secondItem="IUG-xb-J1T" secondAttribute="centerY" id="a2N-6T-KBH"/>
+                    <constraint firstAttribute="trailing" secondItem="y26-38-LmN" secondAttribute="trailing" id="bm5-k5-IRY"/>
                     <constraint firstItem="IUG-xb-J1T" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="mcZ-YT-mkO"/>
+                    <constraint firstItem="R6V-FX-QOz" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="t93-Ft-LuZ"/>
+                    <constraint firstItem="IUG-xb-J1T" firstAttribute="centerY" secondItem="R6V-FX-QOz" secondAttribute="centerY" id="z6k-QB-n4H"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="searchImageView" destination="IUG-xb-J1T" id="GhT-ay-VKP"/>
             </connections>
-            <point key="canvasLocation" x="53" y="93.5"/>
+            <point key="canvasLocation" x="53" y="101.5"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="search" width="19" height="19"/>
+    </resources>
 </document>
